network_policy/db-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  labels:
    app: database
spec:
  containers:
  - env:
    - name: MYSQL_ROOT_PASSWORD
      value: paswrd
    image: mysql
    name: mysql
    ports:
    - containerPort: 3306
      protocol: TCP
