network_policy/external.yml
apiVersion: v1
kind: Pod
metadata:
  name: external-pod
  labels:
    app: external
spec:
  containers:
  - env:
    - name: APP_NAME
      value: external Facing Application
    - name: BG_COLOR
      value: red
    image: kodekloud/webapp-conntest
    name: internal
    ports:
    - containerPort: 8080
      protocol: TCP
