network_policy/payroll.yml
apiVersion: v1
kind: Pod
metadata:
  name: payroll-pod
  labels:
    app: payroll
spec:
  containers:
  - env:
    - name: APP_NAME
      value: payroll Application
    - name: BG_COLOR
      value: green
    image: kodekloud/webapp-conntest
    name: internal
    ports:
    - containerPort: 8080
      protocol: TCP
