network_policy/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: database
  type: ClusterIP
