network_policy/external-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: external
  type: NodePort
