network_policy/internal-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: internal-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: internal
  type: NodePort
