network_policy/payroll-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: payroll-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: payroll
  type: NodePort
