network_policy/external-networkploicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-policy
spec:
  podSelector: 
    matchLabels:
      app: external
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: payroll
    ports:
    - port: 8080
      protocol: TCP
