network_policy/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payroll-policy
spec:
  podSelector: 
    matchLabels:
      app: payroll
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: internal
    ports:
    - port: 8080
      protocol: TCP
